infra/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: ca-homelab
spec:
  tls:
  - hosts:
    - argocd.local-pi
    secretName: argocd-tls
  ingressClassName: traefik
  rules:
  - host: argocd.local-pi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
